# caregiving

./: .gitignore  .pre-commit-config.yaml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.envs/: testenv.yml
.github/workflows/: main.yml
bld/model/: _linear_model_config.pkl  exog_health_transition_female.pkl  exog_processes.pkl  exog_survival_prob_female.pkl  model_for_solution.pkl  model_for_solution_before_caregiving.pkl  model_for_solution_full.pkl  model_for_solution_labor_baseline.pkl  model_no_care_demand.pkl  options.pkl  options_before_caregiving.pkl  options_caregiving_leave_with_job_retention.pkl  options_counterfactual.pkl  options_higher_formal_care_costs.pkl  options_higher_ret_age.pkl  options_job_retention.pkl  options_lower_formal_care_costs.pkl  options_no_care_demand.pkl
bld/model/initial_conditions/: health_by_age.csv  health_by_age_10_000.csv  initial_states.pkl  initial_states_job_retention.pkl  initial_states_no_care_demand.pkl  states.pkl  states_job_retention.pkl  states_job_retention_20_11_25.pkl  states_no_care_demand.pkl  survival_by_age_1m.csv  wealth.csv  wealth_job_retention.csv  wealth_no_care_demand.csv  wealth_old.csv
bld/model/params/: estimated_params_model.yaml  params_estimated_no_care_demand.yaml  params_no_care_demand.yaml  start_params_model.yaml  start_params_model_job_retention.yaml  start_params_model_no_care_demand.yaml  start_params_model_zeros.yaml  start_params_updated.yaml  start_params_updated_no_care_demand.yaml
bld/model/specs/: experience_threshold_very_long_insured.txt  max_exp_diffs_per_period.txt  max_pp_retirement.txt  pp_for_exp_by_sex_edu.pkl  specs_full.pkl
bld/model/start_params_and_bounds/: start_params_updated.yaml
bld/post_estimation/: care_demand_shares_by_age_data.csv  care_mix_by_age_bins_data.csv  care_provision_by_age_data.csv  informal_care_by_age_data.csv  summary_statistics.csv
examples/: scalar_optimization_example.py
src/caregiving/: _estimate.py  _task_estimate.py  config.py  specs.yaml  utils.py
src/caregiving/counterfactual/: _task_simulate_counterfactual.py  draft_plot_styles.py  plotting_helpers.py  plotting_utils.py  simulate_counterfactual.py  state_space_counterfactual.py  task_compute_career_costs.py  task_plot_care_demand.py  task_plot_labor_supply_differences.py  task_plot_labor_supply_differences_caregiving_leave_with_job_retention.py  task_plot_labor_supply_differences_caregiving_leave_with_job_retention_age_functions.py  task_plot_labor_supply_differences_full_caregiving_leave_with_job_retention.py  task_plot_labor_supply_differences_full_caregiving_leave_with_job_retention_age_functions.py  task_plot_labor_supply_differences_higher_formal_care_costs.py  task_plot_labor_supply_differences_higher_formal_care_costs_age_functions.py  task_plot_labor_supply_differences_higher_ret_age.py  task_plot_labor_supply_differences_higher_ret_age_age_profiles.py  task_plot_labor_supply_differences_higher_ret_age_vs_no_care_demand.py  task_plot_labor_supply_differences_job_retention.py  task_plot_labor_supply_differences_job_retention_age_functions.py  task_plot_labor_supply_differences_lower_formal_care_costs.py  task_plot_labor_supply_differences_lower_formal_care_costs_age_functions.py  task_plot_labor_supply_differences_no_care_demand.py  task_plot_labor_supply_differences_no_care_demand_1m.py  task_plot_labor_supply_differences_no_care_demand_age_functions.py  task_plot_labor_supply_differences_no_cash_benefits_higher_formal_care_costs.py  task_plot_labor_supply_differences_no_cash_benefits_higher_formal_care_costs_age_functions.py  task_plot_matched_differences_condition_on_pre_ls.py  task_plot_model_fit_no_care_demand.py  task_plot_no_care_demand_vs_forced_care_demand_at_50.py  task_simulate_counterfactual.py  task_simulate_forced_care_demand_at_50.py  task_simulate_no_care_demand.py  task_solve_and_simulate_caregiving_leave_with_job_retention_estimated_params.py  task_solve_and_simulate_full_caregiving_leave_with_job_retention_estimated_params.py  task_solve_and_simulate_higher_formal_care_costs_estimated_params.py  task_solve_and_simulate_higher_ret_age_estimated_params.py  task_solve_and_simulate_job_retention_estimated_params.py  task_solve_and_simulate_lower_formal_care_costs_estimated_params.py  task_solve_and_simulate_no_care_demand.py  (+5 more)
src/caregiving/descriptives/: INTRA_FAMILY_CAREGIVING_ANALYSIS.md  __init__.py  task_care_arrangements_by_age_latex.py  task_female_male_caregiving_ratios.py  task_intensive_care_within_outside_household.py  task_intra_family_caregiving.py  task_moving_behavior_analysis.py  task_share_women_with_young_children_and_parents_bad_health.py  task_soep_is.py  task_summary_statistics_intensive_care.py
src/caregiving/estimation/: _task_estimate_standard_errors.py  criterion.py  estimation_setup.py  estimation_setup_no_care_demand.py  prepare_estimation.py  standard_errors.py  task_estimate_standard_errors.py  task_solve_and_simulate.py  task_solve_and_simulate_estimated_params.py  task_solve_and_simulate_estimated_params_1m.py  (+2 more)
src/sandbox/: age_of_youngest_child.ipynb  limitations_with_adl.ipynb  ltc_deopendence_by_age_one_plot.ipynb  parent_child.ipynb  parental_survival.ipynb
tests/: ALTERNATIVE_TEST_EXPECTATIONS_SUMMARY.md  ALTERNATIVE_TEST_UPDATE_SUMMARY.md  BUDGET_EQUATION_MIGRATION_SUMMARY.md  test_budget_constraint.py  test_budget_constraint_alternative.py  test_care_demand_transition.py  test_caregiving_type_shares.py  test_draw_functions_bernoulli.py  test_estimate_model_interface.py  test_estimate_model_with_unobserved_type_shares_interface.py  test_exog_transition_probs.py  test_inheritance_calc.py  test_job_offer.py  test_moments_shape_comparison.py  test_partner_transition.py  test_simulate.py  test_state_space.py  test_tax_progression.py  test_utility_functions.py
tests/debug/: test_full_optimization_debug.py  test_identity_weights_debug.py  test_model_solution_debug.py  test_msm_debug.py  test_nan_source_debug.py  test_optimization_debug.py
tests/plotting/: test_plot_inheritance_from_specs.py
(+278 files in other folders)
