[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]


[tool.setuptools_scm]
write_to = "src/caregiving/_version.py"

[tool.pytask.ini_options]
paths = ["./src/caregiving"]

[tool.pytask.ini_options.markers]
# Data management
wip = "Work in progress tasks"
check = "Check tasks"
soep_moments = "SOEP moments tasks"
moments = "Combined/share moments tasks"
cip = "CIP tasks"
dip = "DIP tasks"
standard_errors = "Standard errors estimation tasks"
pre_estimation = "Pre-estimation analysis tasks"
pre_estimation_no_care_demand = "Pre-estimation analysis tasks for no care demand model"
estimation_sample = "Estimation sample tasks"
caregivers_sample = "Caregivers sample tasks"
share_estimation_data = "SHARE estimation data construction tasks"
# Model specification
baseline_model = "Baseline model tasks"
baseline_model_no_inheritance = "Baseline model without inheritance tasks"
no_inheritance = "No inheritance model tasks"
start_params = "Start parameters tasks"
job_retention = "Job retention counterfactual tasks"
lower_formal_care_costs = "Lower formal care costs counterfactual tasks"
higher_formal_care_costs = "Higher formal care costs counterfactual tasks"
no_cash_benefits_higher_formal_care_costs = "No cash benefits higher formal care costs counterfactual tasks"
no_care_demand_model = "No care demand counterfactual model tasks"
no_care_demand_model_no_inheritance = "No care demand counterfactual model without inheritance tasks"
caregiving_leave_with_job_retention_model = "Caregiving leave with job retention counterfactual model tasks"
full_caregiving_leave_with_job_retention_model = "Full caregiving leave with job retention counterfactual model tasks"
specs = "Specs tasks"
inheritance_specs = "Inheritance specification tasks"
# Simulation
sim = "Simulation tasks"
sim_estimated_params = "Simulation with estimated parameters"
sim_estimated_params_no_care_demand = "No care demand simulation with estimated parameters"
sim_job_retention_estimated_params = "Job retention simulation with estimated params"
sim_estimated_params_caregiving_leave_with_job_retention = "Caregiving leave with job retention simulation with estimated params"
sim_estimated_params_full_caregiving_leave_with_job_retention = "Full caregiving leave with job retention simulation with estimated params"
sim_estimated_params_higher_ret_age = "Higher retirement age simulation with estimated params"
sim_estimated_params_no_cash_benefits_higher_formal_care_costs = "No cash benefits higher formal care costs simulation with estimated params"
initial_conditions = "Initial conditions tasks"
initial_conditions_job_retention = "Initial conditions tasks for job retention model"
generate_initial_conditions_1m = "Generate initial conditions with 1 million agents"
generate_initial_conditions_10k = "Generate initial conditions with 10k agents"
plot_initial_conditions = "Initial-conditions plotting tasks"
job_separation = "Job separation estimation and plotting tasks"
descriptives = "Descriptive statistics / summary table tasks"
# Solving
solve_no_care_demand = "Solve no care demand counterfactual"
solve_lower_formal_care_costs = "Solve lower formal care costs counterfactual"
solve_higher_formal_care_costs = "Solve higher formal care costs counterfactual"
solve_and_simulate = "Solve and simulate baseline model with estimated parameters"
# Model fit
model_fit = "Model fit tasks"
model_fit_estimated_params = "Model fit with estimated parameters"
model_fit_estimated_params_moments = "Model fit estimated params moments tasks"
model_fit_job_retention = "Job retention model fit tasks"
model_fit_caregiving_leave_with_job_retention = "Caregiving leave with job retention model fit tasks"
model_fit_higher_ret_age = "Higher retirement age model fit tasks"
higher_ret_age = "Higher retirement age tasks"
# Counterfactual analysis
counterfactual_differences = "Counterfactual differences tasks"
counterfactual_differences_new = "New counterfactual differences tasks"
counterfactual_differences_no_care_demand = "No care demand counterfactual differences"
counterfactual_differences_no_care_demand_1m = "No care demand counterfactual differences with 1 million agents"
counterfactual_differences_job_retention = "Job retention counterfactual differences"
counterfactual_differences_lower_formal_care_costs = "Lower formal care costs counterfactual differences"
counterfactual_differences_higher_formal_care_costs = "Higher formal care costs counterfactual differences"
counterfactual_differences_forced_care_demand_at_50 = "Forced care demand at 50 counterfactual differences"
counterfactual_forced_care_demand_at_50 = "Forced care demand at 50 counterfactual tasks"
counterfactual_differences_caregiving_leave_with_job_retention = "Caregiving leave with job retention counterfactual differences"
counterfactual_differences_full_caregiving_leave_with_job_retention = "Full caregiving leave with job retention counterfactual differences"
counterfactual_differences_caregiving_leave_vs_baseline = "Caregiving leave vs baseline counterfactual differences"
counterfactual_differences_full_caregiving_leave_with_job_retention_vs_baseline = "Full caregiving leave with job retention vs baseline counterfactual differences"
counterfactual_differences_full_caregiving_leave_vs_baseline = "Full caregiving leave vs baseline counterfactual differences"
counterfactual_differences_full_caregiving_leave_vs_caregiving_leave = "Full caregiving leave vs caregiving leave counterfactual differences"
counterfactual_differences_no_cash_benefits_higher_formal_care_costs = "No cash benefits higher formal care costs counterfactual differences"
counterfactual_differences_higher_ret_age = "Higher retirement age counterfactual differences"
counterfactual_differences_higher_ret_age_vs_no_care_demand = "Higher retirement age vs no care demand counterfactual differences"
counterfactual_differences_no_care_demand_vs_baseline = "No care demand vs baseline counterfactual differences"
counterfactual_differences_no_inheritance_vs_no_care_demand = "No inheritance vs no care demand counterfactual differences"
counterfactual_differences_pre_ls = "Counterfactual differences conditioned on pre-labor supply"
counterfactual_differences_end_of_caregiving = "Counterfactual differences at end of caregiving tasks"
counterfactual_differences_end_of_caregiving_intensity = "Counterfactual differences at end of caregiving by intensity tasks"
# Age profile analysis
counterfactual_differences_age_profiles = "Counterfactual age profile differences (all counterfactuals)"
counterfactual_differences_job_retention_age_profiles = "Job retention counterfactual age profile differences"
counterfactual_differences_no_care_demand_age_profiles = "No care demand counterfactual age profile differences"
counterfactual_differences_lower_formal_care_costs_age_profiles = "Lower formal care costs counterfactual age profile differences"
counterfactual_differences_higher_formal_care_costs_age_profiles = "Higher formal care costs counterfactual age profile differences"
counterfactual_differences_cg_leave_age_profiles = "Caregiving leave with job retention counterfactual age profile differences"
counterfactual_differences_full_cg_leave_age_profiles = "Full caregiving leave with job retention counterfactual age profile differences"
counterfactual_differences_no_cash_benefits_higher_formal_care_costs_age_profiles = "No cash benefits higher formal care costs counterfactual age profile differences"
counterfactual_differences_higher_ret_age_age_profiles = "Higher retirement age counterfactual age profile differences"
# Temporary tasks
temp_recreate_data = "Temporary data recreation tasks"
# Debugging
debugging = "Debugging and comparison tasks"
debug_assets = "Debug assets comparison tasks"
debug_assets_baseline = "Debug assets baseline comparison tasks"
debug_accumulated_difference = "Debug accumulated difference tasks"
# Career costs
career_costs = "Career costs computation tasks"
career_costs_caregiving_leave_with_job_retention = "Career costs for caregiving leave with job retention"
career_costs_full_caregiving_leave_with_job_retention = "Career costs for full caregiving leave with job retention"
government_budget = "Government budget computation tasks"
# Plotting
figures = "Figure generation tasks"
bar_chart = "Bar chart plotting tasks"
bar_chart_emp = "Empirical bar chart plotting tasks"
line_chart = "Line chart plotting tasks"
line_chart_emp = "Empirical line chart plotting tasks"
budget_constraint = "Budget constraint plotting tasks"
plot_mother_adl = "Plot mother ADL transition tasks"
plot_mother_death = "Plot mother death transition tasks"
initial_wealth = "Initial wealth plotting tasks"
plot_incomes = "Income plotting tasks"
family_transition = "Family transition plotting tasks"
inheritance = "Inheritance-related tasks"
job_offer_probs = "Job offer probability plotting tasks"
health_transition = "Health transition estimation and plotting tasks"
# Post estimation
post_estimation = "Post estimation tasks"
post_estimation_no_care_demand_model = "Post estimation tasks for no care demand model"
post_estimation_caregivers = "Post-estimation caregiver analysis tasks"
care_demand_post_estimation = "Care demand post estimation tasks"
post_estimation_care_demand = "Post-estimation care demand plotting tasks"
post_estimation_inheritance = "Post-estimation inheritance analysis tasks"
post_estimation_inheritance_no_care_demand = "Post-estimation inheritance analysis tasks for no care demand model"
post_assets_and_savings = "Post-estimation assets and savings plotting tasks"
post_caregiving_leave_top_up = "Post-estimation caregiving leave top-up plotting tasks"
debug = "Debugging and exploratory tasks"


[tool.interrogate]
ignore-init-module = true
ignore-nested-functions = true
exclude = ["setup.py", "docs", "bld"]
ignore-regex = ["task_*"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py311"
fix = true
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
  # isort
  # "I",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
]

extend-ignore = [
    # missing type annotation
    "ANN001",

    # missing type annotation for `*args`
    "ANN002",

    # missing type annotation for `**kwargs`
    "ANN003",

    # missing return type annotation for public function
    "ANN201",

    # missing return type annotation for private function
    "ANN202",

    # Missing docstring in public module
    "D100",

    # missing docstring in public function
    "D103",

    # missing docstring in public package
    "D104",

    # ignore isort
    "I",

    # exception must not use a string literal
    "EM101",

    # exception must not use an f-string literal
    "EM102",

    # Too many arguments to function call
    "PLR0913",

    # use of `assert` detected
    "S101",

    # Private member accessed: `_stochastic_info`
    "SLF001",

    # long messages outside the exception class
    "TRY003",

    # Comparison to True should be cond is True
    "E712",

    # Checks for unused imports
    "F401",

    # Consider `elif` instead of `else` then `if` to remove indentation level
    "PLR5501",

    # Incompatible with formatting
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"docs/source/conf.py" = ["INP001"]
"src/caregiving/sandbox/run.py" = ["INP001", "E501"]
"src/caregiving/utils.py" = ["S301"]
"src/caregiving/simulation/initial_conditions.py" = ["ERA001", "PD008"]
"src/caregiving/moments/task_create_empirical_moments.py" = ["ERA001"]
"src/caregiving/moments/task_create_empirical_cov.py" = ["ERA001"]
"src/caregiving/model/shared.py" = ["ERA001"]
"src/caregiving/model/task_debugging.py" = ["ERA001"]
"src/caregiving/model/task_specify_model.py" = ["ERA001"]
"src/caregiving/model/utility_functions.py" = ["ERA001"]
"src/caregiving/simulation/simulate.py" = ["ERA001"]
"src/caregiving/data_management/task_create_estimation_data_set.py" = ["ERA001"]
"src/caregiving/data_management/task_create_parent_child_data_set.py" = ["ERA001"]
"src/caregiving/counterfactual/task_simulate_counterfactual.py" = ["ERA001", "E501"]
"src/caregiving/counterfactual/state_space_counterfactual.py" = ["E501"]
"src/caregiving/counterfactual/_task_simulate_counterfactual.py" = ["E501"]
"src/caregiving/counterfactual/task_compute_career_costs.py" = ["E501"]
"src/caregiving/counterfactual/task_simulate_forced_care_demand_at_50.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_caregiving_leave_with_job_retention_estimated_params.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_higher_formal_care_costs_estimated_params.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_job_retention_estimated_params.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_lower_formal_care_costs_estimated_params.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_no_care_demand.py" = ["E501"]
"src/caregiving/counterfactual/task_solve_and_simulate_no_cash_benefits_higher_formal_care_costs_estimated_params.py" = ["E501"]
"src/caregiving/estimation/task_estimate_standard_errors.py" = ["E501"]
"src/caregiving/estimation/prepare_estimation.py" = ["E501"]
"src/caregiving/estimation/task_solve_and_simulate.py" = ["E501"]
"src/caregiving/model/state_space.py" = ["E501"]
"src/caregiving/model/task_specify_model_higher_formal_care_costs.py" = ["E501"]
"src/caregiving/model/task_specify_model_job_retention.py" = ["E501"]
"src/caregiving/model/task_specify_model_lower_formal_care_costs.py" = ["E501"]
"src/caregiving/model/task_specify_model_lower_ret_age.py" = ["E501"]
"src/caregiving/model/task_specify_model_no_care_demand.py" = ["E501"]
"src/caregiving/model/task_specify_model_no_cash_benefits_higher_formal_care_costs.py" = ["E501"]
"src/caregiving/exogenous_processes/task_create_exog_processes_soep.py" = ["ERA001"]
"src/caregiving/moments/task_create_care_mix_coefficients.py" = ["ERA001"]
"src/caregiving/simulation/simulate_moments.py" = ["F841"]
"src/caregiving/simulation/_simulate.py" = ["E501"]
"src/caregiving/simulation/_initial_conditions.py" = ["E501"]
"src/caregiving/simulation/task_generate_initial_conditions_no_care_demand.py" = ["E501"]
"src/caregiving/simulation/task_generate_plots_for_slides.py" = ["E501"]
"src/caregiving/simulation/task_plot_model_fit.py" = ["E501"]
"src/caregiving/simulation/task_plot_model_fit_caregiving_leave_with_job_retention.py" = ["E501"]
"src/caregiving/simulation/task_plot_model_fit_higher_ret_age.py" = ["E501"]
"src/caregiving/simulation/task_plot_model_fit_job_retention.py" = ["E501"]
"src/caregiving/simulation/task_plot_model_fit_no_care_demand.py" = ["E501"]
"tests/test_utility_functions.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[[tool.refurb.amend]]
path = "src/caregiving/simulation/simulate.py"
ignore = ["FURB109"]


[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"
